; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_mk712.c_mk712_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_mk712.c_mk712_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }

@mk712_lock = common dso_local global i32 0, align 4
@mk712_io = common dso_local global i64 0, align 8
@MK712_CONTROL = common dso_local global i64 0, align 8
@MK712_ENABLE_INT = common dso_local global i32 0, align 4
@MK712_INT_ON_CONVERSION_COMPLETE = common dso_local global i32 0, align 4
@MK712_INT_ON_CHANGE_IN_TOUCH_STATUS = common dso_local global i32 0, align 4
@MK712_ENABLE_PERIODIC_CONVERSIONS = common dso_local global i32 0, align 4
@MK712_POWERUP = common dso_local global i32 0, align 4
@MK712_RATE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_dev*)* @mk712_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mk712_open(%struct.input_dev* %0) #0 {
  %2 = alloca %struct.input_dev*, align 8
  %3 = alloca i64, align 8
  store %struct.input_dev* %0, %struct.input_dev** %2, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i32 @spin_lock_irqsave(i32* @mk712_lock, i64 %4)
  %6 = load i64, i64* @mk712_io, align 8
  %7 = load i64, i64* @MK712_CONTROL, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @outb(i32 0, i64 %8)
  %10 = load i32, i32* @MK712_ENABLE_INT, align 4
  %11 = load i32, i32* @MK712_INT_ON_CONVERSION_COMPLETE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @MK712_INT_ON_CHANGE_IN_TOUCH_STATUS, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @MK712_ENABLE_PERIODIC_CONVERSIONS, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @MK712_POWERUP, align 4
  %18 = or i32 %16, %17
  %19 = load i64, i64* @mk712_io, align 8
  %20 = load i64, i64* @MK712_CONTROL, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @outb(i32 %18, i64 %21)
  %23 = load i64, i64* @mk712_io, align 8
  %24 = load i64, i64* @MK712_RATE, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @outb(i32 10, i64 %25)
  %27 = load i64, i64* %3, align 8
  %28 = call i32 @spin_unlock_irqrestore(i32* @mk712_lock, i64 %27)
  ret i32 0
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
